client/styles/react-notion-x.css
/* ... */
.notion-page-cover-wrapper {
  width: 100%;
  height: 30vh;
  position: fixed;
  min-height: 30vh;
  max-height: 30vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.notion-collection-card-cover {
  overflow: hidden;
}

.notion-collection-card-cover span,
.notion-collection-card-cover img {
  min-height: 100% !important;
  max-height: 100% !important;
}

.notion-page-cover-wrapper span,
.notion-page-cover-wrapper img {
  width: 100% !important;
  height: 30vh !important;
  min-height: 30vh !important;
  max-height: 30vh !important;
}

.notion-page {
  position: relative;
  padding: 0;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  flex-shrink: 0;
  align-items: flex-start;
  width: 100%;
  max-width: 100%;
}

.notion-page-no-cover {
  margin-top: 48px !important;
  padding-top: 96px;
}

.notion-page-no-cover.notion-page-no-icon {
  padding-top: 0;
}

.notion-page-no-cover.notion-page-has-image-icon {
  padding-top: 148px;
}

.notion-page-has-cover.notion-page-no-icon {
  padding-top: 48px;
}

.notion-page-has-cover {
  margin-top: calc(30vh + 8px);
  background: var(--bg-color);
  padding-top: 96px;
}

.notion-page-has-cover.notion-page-has-icon.notion-page-has-text-icon {
  padding-top: 64px;
}

.notion-page-icon-hero {
  position: absolute;
  top: 0;
  left: 50%;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.notion-page-icon-hero.notion-page-icon-image {
  width: 124px;
  height: 124px;
  margin-left: -62px;
}

.notion-page-icon-hero.notion-page-icon-span {
  height: 78px;
  width: 78px;
  margin-left: -39px;
}

.notion-page-icon-hero .notion-page-icon {
  position: relative;
  display: block;
}

.notion-page-has-cover .notion-page-icon-hero.notion-page-icon-image {
  top: -62px;
}

.notion-page-has-cover .notion-page-icon-hero.notion-page-icon-span {
  top: -42px;
}

.notion-page-icon-hero.notion-page-icon-span .notion-page-icon {
  font-size: 78px;
  line-height: 1.1;
  margin-left: 0;
  color: var(--fg-color-icon);
}

.notion-page-icon-hero.notion-page-icon-image .notion-page-icon {
  display: block;
  border-radius: 3px;
  width: 100%;
  height: 100%;
  max-width: 100%;
  max-height: 100%;
}

.notion-page-icon-hero.notion-page-icon-image img {
  object-fit: cover;
}

.notion-page-icon {
  font-family: 'Apple Color Emoji', 'Segoe UI Emoji', NotoColorEmoji,
    'Noto Color Emoji', 'Segoe UI Symbol', 'Android Emoji', EmojiSymbols;
  font-size: 1.1em;
  fill: var(--fg-color-6);
  color: var(--fg-color-icon);
}

.notion-search .notion-page-icon {
  fill: var(--fg-color-6);
  color: var(--fg-color);
}

img.notion-page-icon,
svg.notion-page-icon {
  display: block;
  object-fit: fill;
  border-radius: 3px;
  max-width: 100%;
  max-height: 100%;
}

.notion-page-icon-inline {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 22px;
  height: 22px;
  max-width: 22px;
  max-height: 22px;
}

.notion-page-icon-inline span {
  max-width: 100%;
  max-height: 100%;
}

.notion-page-icon-inline img {
  object-fit: cover;
}

.notion-full-width {
  box-sizing: border-box;
  --notion-max-width: calc(min(1920px, 98vw));
}

.notion-small-text {
  font-size: 14px;
}

.notion-quote {
  display: block;
  width: 100%;
  white-space: pre-wrap;
  word-break: break-word;
  border-left: 3px solid currentcolor;
  padding: 0.2em 0.9em;
  margin: 6px 0;
  font-size: 1.2em;
}

.notion-hr {
  width: 100%;
  margin: 6px 0;
  padding: 0;
  border-top: none;
  border-color: var(--fg-color-0);
}

.notion-link {
  color: inherit;
  word-break: break-word;
  text-decoration: inherit;
  border-bottom: 0.05em solid;
  border-color: var(--fg-color-2);
  opacity: 0.7;
  transition: border-color 100ms ease-in, opacity 100ms ease-in;
}

.notion-link:hover {
  border-color: var(--fg-color-6);
  opacity: 1;
}

.notion-collection .notion-link {
  opacity: 1;
}

.notion-blank {
  width: 100%;
  min-height: 1rem;
  padding: 3px 2px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.notion-page-link {
  display: flex;
  color: var(--fg-color);
  text-decoration: none;
  width: 100%;
  height: 30px;
  margin: 1px 0;
  transition: background 120ms ease-in 0s;
}

.notion-page-link:hover {
  background: var(--bg-color-0);
}

.notion-collection-card .notion-page-link {
  height: unset;
  margin: 0;
  transition: unset;
}
.notion-collection-card .notion-page-link {
  background: unset;
}

.notion-icon {
  display: block;
  width: 18px;
  height: 18px;
  color: var(--fg-color-icon);
}

.notion-page-text {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  line-height: 1.3;
  border-bottom: 1px solid var(--fg-color-1);
  margin: 4px 0;
}

.notion-inline-code {
  color: #eb5757;
  padding: 0.2em 0.4em;
  background: var(--bg-color-2);
  border-radius: 3px;
  font-size: 85%;
  font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier,
    monospace;
}

.notion-inline-underscore {
  text-decoration: underline;
}

.notion-list {
  margin: 0;
  margin-block-start: 0.6em;
  margin-block-end: 0.6em;
}

.notion-list-disc {
  list-style-type: disc;
  padding-inline-start: 1.7em;
  margin-top: 0;
  margin-bottom: 0;
}
.notion-list-numbered {
  list-style-type: decimal;
  padding-inline-start: 1.6em;
  margin-top: 0;
  margin-bottom: 0;
}

.notion-list-disc li {
  padding-left: 0.1em;
}

.notion-list-numbered li {
  padding-left: 0.2em;
}

.notion-list li {
  padding: 6px 0;
  white-space: pre-wrap;
}

.notion-asset-wrapper {
  margin: 0.5rem 0;
  max-width: 100vw;
  min-width: 100%;
  align-self: center;
  display: flex;
  flex-direction: column;
}

.notion-asset-wrapper-image {
  max-width: 100%;
}

.notion-asset-wrapper-full {
  max-width: 100vw;
}

.notion-asset-wrapper img {
  width: 100%;
  height: 100%;
  max-height: 100%;
}

.notion-asset-wrapper iframe {
  border: none;
  background: rgb(247, 246, 245);
}
/* ... */

